--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,30 +1,35 @@
 name: main
 on: [pull_request]
 jobs:
-  dependencies:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm install -g yarn
+          cache: 'yarn'
       - run: yarn install
-
-  build:
-    runs-on: ubuntu-latest
-    needs: dependencies
-    steps:
-      - run: yarn build:ts
+      - run: yarn build
 
   lint:
     runs-on: ubuntu-latest
-    needs: dependencies
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'yarn'
+      - run: yarn install
       - run: yarn lint
 
   test:
     runs-on: ubuntu-latest
-    needs: dependencies
     steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'yarn'
+      - run: yarn install
       - run: yarn test
