--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "tsc --build .",
     "test": "yarn jest",
     "lint": "eslint src __tests__",
-    "lint:fix": "eslint eslint src __tests__ --fix"
+    "lint:fix": "eslint src __tests__ --fix"
   },
   "author": "Dmitry Til <till.dima@gmail.com>",
   "license": "MIT",
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AstrumU/graphql-authz"
+    "url": "https://github.com/AstrumU/graphql-authz.git"
   },
   "keywords": [
     "typescript",
@@ -31,11 +31,7 @@
     "authz",
     "apollo"
   ],
-  "dependencies": {
-    "lodash": "^4.17.21"
-  },
   "devDependencies": {
-    "@types/lodash": "^4.14.171",
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -54,8 +50,8 @@
   },
   "peerDependencies": {
     "graphql": "^14.0.0 || ^15.0.0",
-    "apollo-server": "^2.25.2",
-    "apollo-server-errors": "^2.5.0",
-    "apollo-server-plugin-base": "^0.13.0"
+    "apollo-server": "^2.14.0",
+    "apollo-server-errors": "^2.14.0",
+    "apollo-server-plugin-base": "^0.9.0"
   }
 }
