--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "apollo-server": "^2.25.2",
-    "apollo-server-core": "^2.25.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -52,9 +51,9 @@
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
-    "graphql": "^14.0.0 || ^15.0.0",
     "apollo-server": "^2.14.0",
     "apollo-server-errors": "^2.14.0",
-    "apollo-server-plugin-base": "^0.9.0"
+    "apollo-server-plugin-base": "^0.9.0",
+    "graphql": "^14.0.0 || ^15.0.0"
   }
 }
