--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es2017",
+    "incremental": true,
+    "composite": true,
+    "target": "es2018",
     "moduleResolution": "node",
     "module": "commonjs",
+    "rootDir": "packages",
     "outDir": "dist",
-    "rootDir": "src",
     "declaration": true,
     "declarationMap": true,
     "inlineSourceMap": true,
@@ -41,8 +43,22 @@
     ]
   },
   "compileOnSave": false,
+  "references": [
+    {
+      "path": "packages/core"
+    },
+    {
+      "path": "packages/directive"
+    },
+    {
+      "path": "packages/plugins/apollo-server"
+    },
+    {
+      "path": "packages/plugins/envelop"
+    }
+  ],
   "include": [
-    "src/**/*.ts"
+    "packages"
   ],
   "exclude": [
     "node_modules",
