--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,4 +43,5 @@ jobs:
           node-version: '14'
           cache: 'yarn'
       - run: yarn install
+      - run: yarn build
       - run: yarn test
