--- a/packages/plugins/apollo-server/package.json
+++ b/packages/plugins/apollo-server/package.json
@@ -10,11 +10,12 @@
   "author": "Dmitry Til <till.dima@gmail.com>",
   "license": "MIT",
   "publishConfig": {
-    "access": "restricted"
+    "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/AstrumU/graphql-authz.git"
+    "url": "https://github.com/AstrumU/graphql-authz.git",
+    "directory": "packages/plugins/apollo-server"
   },
   "keywords": [
     "typescript",
