--- a/examples/package.json
+++ b/examples/package.json
@@ -16,7 +16,9 @@
     "start:type-graphql": "node dist/type-graphql/index.js",
     "start:schema-stitching": "node dist/schema-stitching/index.js & node dist/schema-stitching/services/users/index.js & node dist/schema-stitching/services/posts/index.js",
     "start:apollo-federation": "node dist/apollo-federation/index.js & node dist/apollo-federation/services/users/index.js & node dist/apollo-federation/services/posts/index.js",
-    "start:envelop": "node dist/envelop/index.js"
+    "start:envelop": "node dist/envelop/index.js",
+    "start:express-graphql": "node dist/express-graphql/index.js",
+    "start:graphql-helix": "node dist/graphql-helix/index.js"
   },
   "author": "",
   "license": "MIT",
@@ -24,7 +26,7 @@
     "access": "restricted"
   },
   "dependencies": {
-    "@graphql-authz/core": "*",
+    "@graphql-authz/core": "1.0.0",
     "@envelop/core": "1.0.3",
     "apollo-server-errors": "2.4.2",
     "apollo-server-plugin-base": "0.9.1"
@@ -44,6 +46,8 @@
     "apollo-server": "2.25.0",
     "apollo-server-core": "2.21.2",
     "cross-fetch": "3.1.4",
+    "express-graphql": "0.12.0",
+    "graphql-helix": "1.8.0",
     "jest": "^26.6.3",
     "reflect-metadata": "0.1.13",
     "rxjs": "6.6.3",
