--- a/package.json
+++ b/package.json
@@ -28,29 +28,30 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.16.0",
-    "@envelop/types": "^1.0.2",
+    "@envelop/types": "^1.4.0",
     "@graphql-tools/schema": "^8.1.2",
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
-    "apollo-server": "^2.25.2",
-    "apollo-server-plugin-base": "^0.9.0",
+    "apollo-server": "^3.4.0",
+    "apollo-server-core": "^3.4.0",
+    "apollo-server-plugin-base": "^3.3.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "graphql": "^15.5.1",
-    "jest": "^27.0.6",
+    "graphql": "^16.0.0",
+    "jest": "^27.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.3",
-    "typescript": "^4.3.5"
+    "ts-jest": "^27.0.7",
+    "typescript": "4.4.4"
   },
   "peerDependencies": {
-    "graphql": "^14.0.0 || ^15.0.0"
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   },
   "workspaces": [
     "./packages/*",
