--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,9 +28,9 @@
     "envelop"
   ],
   "devDependencies": {
-    "graphql": "^15.5.1"
+    "graphql": "^16.0.0"
   },
   "peerDependencies": {
-    "graphql": "^14.0.0 || ^15.0.0"
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   }
 }
