--- a/packages/directive/package.json
+++ b/packages/directive/package.json
@@ -32,9 +32,9 @@
     "@graphql-tools/utils": "8.1.2"
   },
   "devDependencies": {
-    "graphql": "^15.5.1"
+    "graphql": "^16.0.0"
   },
   "peerDependencies": {
-    "graphql": "^14.0.0 || ^15.0.0"
+    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   }
 }
