--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -35,6 +35,7 @@ jobs:
       - run: yarn prettier
 
   test:
+    name: Test on GraphQL ${{matrix.graphql_version}}
     runs-on: ubuntu-latest
     strategy:
       matrix:
