--- a/examples/packages/apollo-server-code-first/tsconfig.json
+++ b/examples/packages/apollo-server-code-first/tsconfig.json
@@ -1,8 +1,9 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "target": "es2017",
+    "incremental": true,
+    "composite": true,
+    "target": "es2018",
     "moduleResolution": "node",
     "module": "commonjs",
     "outDir": "dist",
@@ -43,40 +44,11 @@
     ]
   },
   "compileOnSave": false,
-  "references": [
-    {
-      "path": "packages/apollo-federation"
-    },
-    {
-      "path": "packages/apollo-server-code-first"
-    },
-    {
-      "path": "packages/apollo-server-schema-first"
-    },
-    {
-      "path": "packages/envelop"
-    },
-    {
-      "path": "packages/express-graphql"
-    },
-    {
-      "path": "packages/graphql-helix"
-    },
-    {
-      "path": "packages/nestjs"
-    },
-    {
-      "path": "packages/schema-stitching"
-    },
-    {
-      "path": "packages/type-graphql"
-    }
-  ],
   "include": [
-    "src/**/*.ts"
+    "src"
   ],
   "exclude": [
     "node_modules",
-    "dist"
+    "**dist"
   ]
 }
