--- a/package.json
+++ b/package.json
@@ -50,12 +50,8 @@
     "ts-jest": "^27.0.7",
     "typescript": "4.4.4"
   },
-  "peerDependencies": {
-    "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
-  },
   "workspaces": [
     "./packages/*",
-    "./packages/plugins/*",
-    "./examples"
+    "./packages/plugins/*"
   ]
 }
