--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.16.0",
     "@envelop/types": "^1.4.0",
+    "@graphql-tools/mock": "^8.7.1",
     "@graphql-tools/schema": "^8.1.2",
     "@types/jest": "^26.0.24",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
