--- a/packages/plugins/apollo-server/package.json
+++ b/packages/plugins/apollo-server/package.json
@@ -30,11 +30,10 @@
     "@graphql-authz/core": "1.3.0"
   },
   "devDependencies": {
-    "apollo-server": "3.4.0",
-    "apollo-server-plugin-base": "3.3.0"
+    "@apollo/server": "4.2.1"
   },
   "peerDependencies": {
-    "apollo-server": "^3.0.0",
+    "@apollo/server": "^4.0.0",
     "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   }
 }
