--- a/examples/packages/schema-stitching/package.json
+++ b/examples/packages/schema-stitching/package.json
@@ -18,12 +18,9 @@
     "access": "restricted"
   },
   "dependencies": {
+    "@apollo/server": "4.7.5",
     "@graphql-tools/stitch": "7.5.3",
     "@graphql-tools/stitching-directives": "1.3.3",
-    "apollo-server-errors": "3.3.0",
-    "apollo-server-plugin-base": "3.3.0",
-    "apollo-server": "2.25.3",
-    "apollo-server-core": "3.4.0",
     "cross-fetch": "3.1.5",
     "wait-on": "6.0.0"
   },
