chore: migrate from yarn to pnpm

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -8,13 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          cache: 'yarn'
-      - run: yarn install
-      - run: yarn build
-      - run: yarn test
+          cache: 'pnpm'
+      - run: pnpm install
+      - run: pnpm build
+      - run: pnpm test
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
