--- a/examples/package.json
+++ b/examples/package.json
@@ -13,7 +13,7 @@
     "clean:packages": "rimraf packages/*/{dist,node_modules,tsconfig.tsbuildinfo}",
     "clean:root": "rimraf {node_modules,coverage,tsconfig.tsbuildinfo}",
     "build": "tsc --build .",
-    "watch": "yarn build -w --preserveWatchOutput",
+    "watch": "pnpm build -w --preserveWatchOutput",
     "postinstall": "rimraf node_modules/graphql",
     "start:apollo-server-schema-first": "node packages/apollo-server-schema-first/dist/index.js",
     "start:apollo-server-code-first": "node packages/apollo-server-code-first/dist/index.js",
@@ -30,16 +30,12 @@
   "publishConfig": {
     "access": "restricted"
   },
-  "resolutions": {
-    "graphql": "16.8.1"
-  },
   "dependencies": {},
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
+    "@types/jest": "26.0.24",
+    "@types/node": "20.14.10",
+    "npm-run-all": "4.1.5",
+    "rimraf": "3.0.2",
     "typescript": "4.9.3"
-  },
-  "workspaces": [
-    "./packages/*"
-  ]
+  }
 }
