--- a/examples/packages/apollo-server-code-first/package.json
+++ b/examples/packages/apollo-server-code-first/package.json
@@ -18,9 +18,14 @@
     "access": "restricted"
   },
   "dependencies": {
-    "@apollo/server": "4.7.5"
+    "@apollo/server": "4.7.5",
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-authz/apollo-server-plugin": "3.1.1",
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "@types/jest": "26.0.24",
+    "@types/node": "20.14.10"
   }
 }
