--- a/examples/packages/nestjs/package.json
+++ b/examples/packages/nestjs/package.json
@@ -19,14 +19,20 @@
   },
   "dependencies": {
     "@apollo/server": "4.7.5",
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-authz/apollo-server-plugin": "3.1.1",
+    "@graphql-authz/directive": "1.1.4",
     "@nestjs/apollo": "12.0.4",
     "@nestjs/common": "10.0.3",
     "@nestjs/core": "10.0.3",
     "@nestjs/graphql": "12.0.4",
     "@nestjs/platform-express": "10.0.3",
+    "graphql": "^16.8.1",
     "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "@types/jest": "26.0.24",
+    "@types/node": "20.14.10"
   }
 }
