--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "clean:packages": "rimraf packages/{,plugins}/*/{dist,node_modules,tsconfig.tsbuildinfo}",
     "clean:root": "rimraf {node_modules,coverage,tsconfig.tsbuildinfo}",
     "build": "tsc --build tsconfig.json",
-    "watch": "yarn build -w --preserveWatchOutput",
-    "test": "yarn jest --coverage",
+    "watch": "pnpm build -w --preserveWatchOutput",
+    "test": "pnpm jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check packages/*/src/**/*.ts packages/plugins/*/src/**/*.ts __tests__",
     "prettier:fix": "prettier --write packages/*/src/**/*.ts packages/plugins/*/src/**/*.ts __tests__",
-    "prerelease": "yarn build",
+    "preinstall": "npx only-allow pnpm",
+    "prerelease": "pnpm build",
     "release": "changeset publish"
   },
   "author": "Dmitry Til <till.dima@gmail.com>",
@@ -29,30 +30,34 @@
   },
   "devDependencies": {
     "@apollo/server": "4.7.5",
-    "@changesets/cli": "^2.16.0",
-    "@envelop/types": "^5.0.0",
-    "@graphql-tools/mock": "^9.0.0",
-    "@graphql-tools/schema": "^10.0.2",
-    "@graphql-tools/wrap": "^10.0.1",
-    "@types/jest": "^26.0.24",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-security": "^1.4.0",
+    "@changesets/cli": "2.16.0",
+    "@envelop/core": "5.0.1",
+    "@envelop/types": "5.0.0",
+    "@graphql-authz/apollo-server-plugin": "workspace:^",
+    "@graphql-authz/apollo-server-v2-plugin": "workspace:^",
+    "@graphql-authz/core": "workspace:^",
+    "@graphql-authz/directive": "workspace:^",
+    "@graphql-authz/envelop-plugin": "workspace:^",
+    "@graphql-tools/mock": "9.0.0",
+    "@graphql-tools/schema": "10.0.2",
+    "@graphql-tools/utils": "10.0.11",
+    "@graphql-tools/wrap": "10.0.1",
+    "@types/jest": "26.0.24",
+    "@types/node": "20.14.10",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint": "7.30.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.23.4",
+    "eslint-plugin-promise": "5.1.0",
+    "eslint-plugin-security": "1.4.0",
     "graphql": "^16.8.1",
-    "jest": "^27.3.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.7",
+    "jest": "27.3.1",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.3.2",
+    "rimraf": "3.0.2",
+    "ts-jest": "27.0.7",
     "typescript": "4.9.3"
-  },
-  "workspaces": [
-    "./packages/*",
-    "./packages/plugins/*"
-  ]
+  }
 }
