--- a/packages/directive/package.json
+++ b/packages/directive/package.json
@@ -28,13 +28,13 @@
     "envelop"
   ],
   "dependencies": {
-    "@graphql-authz/core": "1.3.1",
     "@graphql-tools/utils": "10.0.11"
   },
   "devDependencies": {
     "graphql": "^16.0.0"
   },
   "peerDependencies": {
+    "@graphql-authz/core": "^1.3.1",
     "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   }
 }
