--- a/packages/plugins/apollo-server-v2/package.json
+++ b/packages/plugins/apollo-server-v2/package.json
@@ -26,14 +26,12 @@
     "authz",
     "apollo"
   ],
-  "dependencies": {
-    "@graphql-authz/core": "1.3.1"
-  },
   "devDependencies": {
     "apollo-server": "2.25.2",
     "apollo-server-plugin-base": "0.13.0"
   },
   "peerDependencies": {
+    "@graphql-authz/core": "^1.3.1",
     "apollo-server": "^2.25.2",
     "graphql": "^14.0.0 || ^15.0.0"
   }
