--- a/packages/plugins/apollo-server/package.json
+++ b/packages/plugins/apollo-server/package.json
@@ -26,14 +26,12 @@
     "authz",
     "apollo"
   ],
-  "dependencies": {
-    "@graphql-authz/core": "1.3.1"
-  },
   "devDependencies": {
     "@apollo/server": "4.7.5"
   },
   "peerDependencies": {
     "@apollo/server": "^4.0.0",
+    "@graphql-authz/core": "^1.3.1",
     "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   }
 }
