--- a/packages/plugins/envelop/package.json
+++ b/packages/plugins/envelop/package.json
@@ -26,13 +26,11 @@
     "authz",
     "envelop"
   ],
-  "dependencies": {
-    "@graphql-authz/core": "1.3.1"
-  },
   "devDependencies": {
     "@envelop/core": "5.0.1"
   },
   "peerDependencies": {
-    "@envelop/core": "^5.0.1"
+    "@envelop/core": "^5.0.1",
+    "@graphql-authz/core": "^1.3.1"
   }
 }
