--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.10.0'
+          node-version-file: ".nvmrc"
           cache: 'yarn'
       - run: yarn install
       - run: yarn build
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.10.0'
+          node-version-file: ".nvmrc"
           cache: 'yarn'
       - run: yarn install
       - run: yarn lint
@@ -29,7 +29,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.10.0'
+          node-version-file: ".nvmrc"
           cache: 'yarn'
       - run: yarn install
       - run: yarn prettier
@@ -45,7 +45,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.10.0'
+          node-version-file: ".nvmrc"
           cache: 'yarn'
       - name: Downgrade GraphQL v${{matrix.graphql_version}}
         if: ${{matrix.graphql_version != 16}}
