--- a/examples/packages/apollo-server-code-first/package.json
+++ b/examples/packages/apollo-server-code-first/package.json
@@ -23,9 +23,5 @@
     "@graphql-authz/apollo-server-plugin": "3.1.1",
     "graphql": "^16.8.1"
   },
-  "devDependencies": {
-    "typescript": "4.9.3",
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10"
-  }
+  "devDependencies": {}
 }
