--- a/examples/packages/type-graphql/package.json
+++ b/examples/packages/type-graphql/package.json
@@ -25,9 +25,5 @@
     "graphql": "15.3.0",
     "reflect-metadata": "0.1.13"
   },
-  "devDependencies": {
-    "typescript": "4.9.3",
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10"
-  }
+  "devDependencies": {}
 }
