--- a/examples/package.json
+++ b/examples/package.json
@@ -31,11 +31,5 @@
     "access": "restricted"
   },
   "dependencies": {},
-  "devDependencies": {
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10",
-    "npm-run-all": "4.1.5",
-    "rimraf": "3.0.2",
-    "typescript": "4.9.3"
-  }
+  "devDependencies": {}
 }
