--- a/examples/packages/envelop/package.json
+++ b/examples/packages/envelop/package.json
@@ -26,9 +26,5 @@
     "@graphql-tools/schema": "10.0.4",
     "graphql": "^16.8.1"
   },
-  "devDependencies": {
-    "typescript": "4.9.3",
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10"
-  }
+  "devDependencies": {}
 }
