--- a/examples/packages/express-graphql/package.json
+++ b/examples/packages/express-graphql/package.json
@@ -26,9 +26,6 @@
     "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "@types/express": "4.17.21",
-    "typescript": "4.9.3",
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10"
+    "@types/express": "4.17.21"
   }
 }
