--- a/examples/packages/graphql-helix/package.json
+++ b/examples/packages/graphql-helix/package.json
@@ -25,9 +25,6 @@
     "graphql-helix": "1.9.1"
   },
   "devDependencies": {
-    "@types/express": "4.17.21",
-    "typescript": "4.9.3",
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10"
+    "@types/express": "4.17.21"
   }
 }
