--- a/examples/packages/schema-stitching/package.json
+++ b/examples/packages/schema-stitching/package.json
@@ -31,9 +31,6 @@
     "wait-on": "6.0.0"
   },
   "devDependencies": {
-    "@types/wait-on": "5.3.1",
-    "typescript": "4.9.3",
-    "@types/jest": "26.0.24",
-    "@types/node": "20.14.10"
+    "@types/wait-on": "5.3.1"
   }
 }
