--- a/examples/packages/apollo-federation/package.json
+++ b/examples/packages/apollo-federation/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsc --build .",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js & node dist/services/users/index.js & node dist/services/posts/index.js"
   },
   "author": "",
   "license": "MIT",
@@ -21,9 +21,10 @@
     "@apollo/server": "4.7.5",
     "@apollo/subgraph": "2.4.8",
     "@apollo/gateway": "2.4.8",
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-authz/apollo-server-plugin": "3.1.1",
+    "graphql": "^16.8.1",
     "graphql-tag": "2.12.6"
   },
-  "devDependencies": {
-    "typescript": "4.9.3"
-  }
+  "devDependencies": {}
 }
