--- a/examples/packages/envelop/package.json
+++ b/examples/packages/envelop/package.json
@@ -18,9 +18,13 @@
     "access": "restricted"
   },
   "dependencies": {
-    "@envelop/core": "5.0.1"
+    "@envelop/core": "5.0.1",
+    "@envelop/types": "5.0.0",
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-authz/directive": "1.1.4",
+    "@graphql-authz/envelop-plugin": "1.0.5",
+    "@graphql-tools/schema": "10.0.4",
+    "graphql": "^16.8.1"
   },
-  "devDependencies": {
-    "typescript": "4.9.3"
-  }
+  "devDependencies": {}
 }
