--- a/examples/packages/express-graphql/package.json
+++ b/examples/packages/express-graphql/package.json
@@ -18,9 +18,14 @@
     "access": "restricted"
   },
   "dependencies": {
-    "express-graphql": "0.12.0"
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-authz/directive": "1.1.4",
+    "@graphql-tools/schema": "10.0.4",
+    "express": "4.19.2",
+    "express-graphql": "0.12.0",
+    "graphql": "^16.8.1"
   },
   "devDependencies": {
-    "typescript": "4.9.3"
+    "@types/express": "4.17.21"
   }
 }
