--- a/examples/packages/graphql-helix/package.json
+++ b/examples/packages/graphql-helix/package.json
@@ -18,9 +18,13 @@
     "access": "restricted"
   },
   "dependencies": {
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-tools/schema": "10.0.4",
+    "express": "4.19.2",
+    "graphql": "^16.8.1",
     "graphql-helix": "1.9.1"
   },
   "devDependencies": {
-    "typescript": "4.9.3"
+    "@types/express": "4.17.21"
   }
 }
