--- a/examples/packages/schema-stitching/package.json
+++ b/examples/packages/schema-stitching/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "build": "tsc --build .",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js & node dist/services/users/index.js & node dist/services/posts/index.js"
   },
   "author": "",
   "license": "MIT",
@@ -19,13 +19,18 @@
   },
   "dependencies": {
     "@apollo/server": "4.7.5",
+    "@graphql-authz/core": "1.3.1",
+    "@graphql-authz/apollo-server-plugin": "3.1.1",
+    "@graphql-authz/directive": "1.1.4",
+    "@graphql-tools/schema": "10.0.4",
     "@graphql-tools/stitch": "9.0.3",
     "@graphql-tools/stitching-directives": "3.0.0",
     "cross-fetch": "3.1.5",
+    "graphql": "^16.8.1",
+    "graphql-tag": "2.12.6",
     "wait-on": "6.0.0"
   },
   "devDependencies": {
-    "@types/wait-on": "5.3.1",
-    "typescript": "4.9.3"
+    "@types/wait-on": "5.3.1"
   }
 }
