--- a/examples/packages/type-graphql/package.json
+++ b/examples/packages/type-graphql/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@apollo/server": "4.7.5",
-    "type-graphql": "1.1.1"
+    "@graphql-authz/apollo-server-plugin": "3.1.1",
+    "@graphql-authz/core": "1.3.1",
+    "type-graphql": "1.1.1",
+    "graphql": "15.3.0",
+    "reflect-metadata": "0.1.13"
   },
-  "devDependencies": {
-    "typescript": "4.9.3"
-  }
+  "devDependencies": {}
 }
