--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,10 @@
   "devDependencies": {
     "graphql": "^16.8.1"
   },
+  "dependencies": {
+    "lodash.isempty": "4.4.0",
+    "lodash.isnil": "4.0.0"
+  },
   "peerDependencies": {
     "graphql": "^14.0.0 || ^15.0.0 || ^16.0.0"
   }
