chore: bump typescript

--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "@graphql-tools/utils": "10.0.11",
     "@graphql-tools/wrap": "10.0.1",
     "@types/jest": "26.0.24",
+    "@types/lodash.has": "^4.5.9",
+    "@types/lodash.isempty": "^4.4.9",
+    "@types/lodash.isnil": "^4.0.9",
     "@types/node": "20.14.10",
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
